--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "setup-dbs": "psql -f ./db/setup.sql",
     "seed": "node ./db/seeds/run-seed.js",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "test": "psql -f ./db/setup.sql && jest"
   },
   "repository": {
     "type": "git",
@@ -19,14 +20,15 @@
   },
   "homepage": "https://github.com/joelali5/Authentication-system-backend#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "nodemon": "^2.0.22",
     "pg": "^8.10.0",
-    "pg-format": "^1.0.4",
-    "supertest": "^6.3.3"
+    "pg-format": "^1.0.4"
   },
   "devDependencies": {
-    "jest": "^29.5.0"
+    "jest": "^29.5.0",
+    "supertest": "^6.3.3"
   }
 }
