--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "authentication-system-backend",
   "version": "1.0.0",
   "description": "An authentication system",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "setup-dbs": "psql -f ./db/setup.sql",
     "relation": "node ./db/relations.js",
