--- a/.env.test
+++ b/.env.test
@@ -1,4 +1,4 @@
-PGDATABASE=authsystem
+# PGDATABASE=authsystem
 NODE_ENV=test
 SECRET=bshjbx%7^xnxnsjmxnjdbcjdhcbbuhdafsqrwtdbcxjedd
 DATABASE_URL=postgres://tasufseu:OKEAz7i4y8lNG8JfGhzwKPFAbcTBroZ2@balarama.db.elephantsql.com/tasufseu
